<resources>
    <string name="app_name">My Class</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="danhsachsv">List Of Students</string>
    <string name="themsv">Adding A Student</string>
    <string name="themlop">Adding A Classroom</string>
    <string name="update_student">Updating Student\'s Information</string>
    <string name="masv">Code</string>
    <string name="ma_sv">Code:</string>
    <string name="tensv">Name</string>
    <string name="ten_sv">Name:</string>
    <string name="ngaysinh">Birthday</string>
    <string name="gt">Sex</string>
    <string name="gioitinh">Sex:</string>
    <string name="nam">Male</string>
    <string name="nu">Female</string>
    <string name="ngay_sinh">Birthday:</string>
    <string name="xoa_trang">Clear</string>
    <string name="luu_sv">Save</string>
    <string name="saved">Saved!</string>
    <string name="error">Error!</string>
    <string name="updated">Updated!</string>
    <string name="student_exists">This student already exists in the list</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_student_message">Delete this student?</string>
    <string name="delete_classroom_message">Delete this classroom?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="search">Search</string>
    <string name="danhsachlop">List Of Classrooms</string>
    <string name="malop">Code</string>
    <string name="tenlop">Course\'s Name</string>
    <string name="giobatdau">Starting Time</string>
    <string name="gioketthuc">Ending Time</string>
    <string name="thoigian">Timestream</string>
    <string name="phonghoc">Classroom</string>
    <string name="tongsosv">Tồng SV</string>
    <string name="luulop">Save</string>
    <string name="update_class">Updating The Classroom</string>
    <string name="class_exits">Classroom\'s code already exists!</string>
    <string name="soluong">Total: </string>
    <string name="order_num">Order </string>
    <string name="menu_home">Home</string>
    <string name="home_second">Home Second</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="quanlylop">Quản lý lớp</string>
    <string name="menu_call">Call</string>
    <string name="menu_sendMess">Send Message</string>
    <string name="menu_sendMail">Send Email</string>
    <string name="goidienchohs">Gọi điện</string>
    <string name="thongbaonghi">Thông báo nghỉ học</string>
    <string name="nhantinchohs">Nhắn tin</string>
    <string name="emailToStudent">Gửi mail cho cả lớp</string>
    <string name="sodienthoai">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="telephony_not_enabled">Điện thoại không khả dụng</string>
    <string name="failure_permission">Truy cập bị từ chối</string>
    <string name="phone_status">Tình trạng điện thoại: </string>
    <string name="ringing">Đang đổ chuông...</string>
    <string name="offhook">Đang kết nối...</string>
    <string name="idle">Đang ở chế độ chờ...</string>
    <string name="thong_bao">Thông báo</string>
</resources>