<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="13.5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvOrderClass"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/order_num"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvIdClass"
        android:layout_weight="2.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/malop"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"/>

    <TextView
        android:id="@+id/tvNameClass"
        android:layout_weight="3.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/tenlop"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvTimeClass"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/thoigian"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvRoomClass"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/phonghoc"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>

</LinearLayout>