<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="12"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvOrderStudent"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/order_num"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>


    <TextView
        android:id="@+id/tvIdStudent"
        android:layout_weight="2.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/masv"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"/>

    <TextView
        android:id="@+id/tvNameStudent"
        android:layout_weight="3.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/tensv"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvBirthdayStudent"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:text="@string/ngaysinh"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/ivGenderStudent"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:src="@mipmap/ic_male_student" />

</LinearLayout>