<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_padding"
    android:paddingRight="@dimen/activity_vertical_padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClassroomsListFragment"
    tools:showIn="@layout/fragment_classroom_list">

    <TextView
        android:id="@+id/tvTitleClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/danhsachlop"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_blue" />

    <LinearLayout
        android:id="@+id/ll_row_title_class"
        android:weightSum="13.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleClass"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/order_num"
            android:textColor="@color/dark_blue" />
        <TextView
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/malop"
            android:textColor="@color/dark_blue" />


        <TextView
            android:layout_weight="3.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/tenlop"
            android:textColor="@color/dark_blue" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/thoigian"
            android:textColor="@color/dark_blue" />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/phonghoc"
            android:textColor="@color/dark_blue" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvListCLassManagers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_row_title_class" />

    <ImageButton
        android:id="@+id/btn_addi"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_button_format"
        android:src="@drawable/ic_rounded_add" />
</RelativeLayout>